--- a/css/styles.css
+++ b/css/styles.css
@@ -179,25 +179,21 @@ p {
 
 @media screen and (max-width: 767px) {
   .menu {
-    width: 320px;
-    min-height: 640px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    padding: 72px 16px 16px;
-    background-color: #fcfcfc;
-    border-radius: 4px;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
-      0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    padding: 72px 16px 40px 16px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .menu-nav {
+    margin-bottom: auto;
   }
 
   .menu-list {
     display: flex;
     flex-direction: column;
     gap: 40px;
-    margin-bottom: 168px;
   }
   .menu-item {
     font-weight: 700;
@@ -232,6 +228,7 @@ p {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    font-style: normal;
     color: #434455;
     text-decoration: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -274,8 +271,8 @@ p {
   }
 
   .menu-icon {
-    width: 16px;
-    height: 16px;
+    width: 24px;
+    height: 24px;
     fill: #f4f4fd;
   }
 }
@@ -297,6 +294,8 @@ p {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  max-width: 328px;
+  text-align: center;
 }
 
 @media screen and (min-resolution: 2dppx),
@@ -358,6 +357,7 @@ p {
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/tablet/office-t1x.jpg);
+      max-width: 768px;
   }
   @media screen and (min-resolution: 2dppx),
     (min-resolution: 192dpi),
@@ -389,6 +389,7 @@ p {
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/desktop/office.jpg);
+      max-width: 1440px;
   }
   @media screen and (min-resolution: 2dppx),
     (min-resolution: 192dpi),
@@ -467,7 +468,6 @@ p {
 
   .advantages-item {
     width: 356px;
-    height: 120px;
   }
 
   .advantages-subtitle {
@@ -484,11 +484,10 @@ p {
     display: flex;
     flex-wrap: nowrap;
     gap: 24px;
-    padding-bottom: 120px;
   }
 
   .advantages-item {
-    width: ((100%-72px)/4);
+    width: calc((100% - 72px) / 4);
   }
 
   .advantages-icon {
@@ -537,7 +536,7 @@ p {
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  gap: 72px;
+  gap: 24px;
 }
 
 .our-team-item {
@@ -661,13 +660,11 @@ p {
   width: 288px;
   height: 400px;
   background: #fff;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.port-item:hover {
-  box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16),
+   box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16),
     0 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+
 
 .port-item-img {
   position: relative;
@@ -753,7 +750,13 @@ p {
 
   .port-item {
     width: 360px;
+    box-shadow: none;
   }
+
+  .port-item:hover {
+  box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16),
+    0 2px 1px rgba(46, 47, 66, 0.08);
+}
 }
 
 /* footer */
@@ -767,9 +770,8 @@ p {
 .footer-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  padding: 0;
 }
 
 .footer-logo-media {
@@ -882,7 +884,7 @@ p {
   background: #2e2f42;
   border: 1px solid #fff;
   border-radius: 4px;
-  width: 264px;
+  width: 288px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
@@ -900,7 +902,6 @@ p {
 .footer-button {
   display: flex;
   border-radius: 4px;
-  /* padding: 8px 24px; */
   min-width: 165px;
   height: 40px;
   background: #4d5ae5;
@@ -915,7 +916,6 @@ p {
   cursor: pointer;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-top: 16px;
 }
 
 .footer-button:hover,
@@ -931,6 +931,7 @@ p {
 
 @media screen and (min-width: 768px) {
   .footer-container {
+    padding-left: 108px;
   }
 
   .footer-logo-media {
@@ -939,24 +940,25 @@ p {
     align-items: flex-start;
     justify-content: center;
     align-items: baseline;
-    margin-right: 168px;
-    margin-left: 108px;
   }
 
   .footer-logo-text {
     align-items: flex-start;
-    padding-right: 24px;
-    margin: 0;
+    margin-right: 24px;
   }
 
   .footer-media {
     margin: 0;
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .footer-aside {
+    display: flex;
   }
 
   .footer-subscribe {
     align-items: flex-start;
-    margin-right: 207px;
-    margin-left: 108px;
   }
 
   .form {
@@ -964,6 +966,10 @@ p {
     flex-direction: row;
     gap: 24px;
     align-items: baseline;
+  }
+
+  .email {
+    width: 264px;
   }
 }
 
@@ -977,6 +983,7 @@ p {
     display: flex;
     flex-direction: row;
     align-items: baseline;
+    padding-left: 15px;
   }
 
   .footer-logo-media {
@@ -1008,12 +1015,16 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
+  background-color: #fff;
   opacity: 0;
   visibility: hidden;
-  position: none;
+  pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-backdrop {
+  background-color: rgba(46, 47, 66, 0.4);
 }
 
 .is-open {
@@ -1079,11 +1090,7 @@ p {
 }
 
 .modal-form {
-  /* display: flex; */
-  /* align-items: flex-start; */
-  /* justify-content: flex-start; */
   flex-direction: column;
-  /* gap: 8px; */
 }
 
 .modal-box {
@@ -1167,6 +1174,8 @@ p {
 }
 
 .check-text {
+  display: flex;
+  align-items: center;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -1180,6 +1189,7 @@ p {
 
 .box-check-icon {
   display: inline-flex;
+  flex-shrink: 0;
   width: 16px;
   height: 16px;
   border-radius: 2px;
